<resources>
    <string name="app_name">chatApplication</string>
    <string name="client_id">835813292612-7c5pdp5hfo3sssh5rrsv0ll4p2e7ruo5.apps.googleusercontent.com</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="dob">DOB</string>
    <string name="save">Save</string>
    <string name="my_profile">My Profile</string>
    <string name="upload">Upload</string>
    <string name="enter_text">Enter text</string>
    <string name="send">Send</string>
    <string name="refresh">Refresh</string>
    <string name="scrolltotop">ScrollToTop</string>
    <string name="update_profile">Update Profile</string>
</resources>